# doodle-dude

./: CMakeLists.txt  README.md  main.cpp
Framework-mac/: CMakeLists.txt
Framework-mac/src/: launch.cpp
Framework-win64/: game.cpp
src/FGameState/: FGameState.cpp  FGameState.h
src/Framework/GameState/: FBaseGameState.h
src/Framework/Input/: FInput.h
src/Framework/Object/: FObject.cpp
src/Framework/Physics/Collider/: FCollider.cpp  FCollider.h
src/Framework/Physics/PhysicsScene/: FPhysicsScene.cpp  FPhysicsScene.h
src/Framework/UI/HorizontalContainer/: FHorizontalContainer.cpp  FHorizontalContainer.h
src/FrameworkCamera/: FCamera.cpp  FCamera.h
src/FrameworkObjects/: FObject.h
src/FrameworkObjects/DoodleGuy/: ODoodleGuy.cpp  ODoodleGuy.h
src/FrameworkObjects/PlatformSpawner/: OPlatformSpawner.cpp  OPlatformSpawner.h
src/FrameworkScene/: FScene.cpp  FScene.h
src/Game/: DoodleGuyGame.cpp  DoodleGuyGame.h
src/Game/Common/: Random.h
src/Game/Common/NumberSprites/: NumberSprites.cpp  NumberSprites.h
src/Game/Common/SpawnerStruct/: SegmentSpawningConfiguration.h
src/Game/Objects/Jetpack/: OJetpack.cpp  OJetpack.h  OJetpackSpawner.cpp  OJetpackSpawner.h
src/Game/Objects/MonsterSpawner/: OMonsterSpawner.cpp  OMonsterSpawner.h
src/Game/Objects/Monsters/: OMonster.cpp  OMonster.h
src/Game/Objects/Projectile/: OProjectile.cpp  OProjectile.h
src/Game/Objects/Tiles/: OTile.h
src/Game/Objects/Tiles/BrokenTile/: OBrokenTile.cpp  OBrokenTile.h
src/Game/Objects/Tiles/SimpleTile/: OSimpleTile.cpp  OSimpleTile.h
(+6 files in other folders)
